; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_parser.c_xmlCleanupParser.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_parser.c_xmlCleanupParser.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xmlParserInitialized = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xmlCleanupParser() #0 {
  %1 = load i64, i64* @xmlParserInitialized, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %12

4:                                                ; preds = %0
  %5 = call i32 (...) @xmlCleanupCharEncodingHandlers()
  %6 = call i32 (...) @xmlDictCleanup()
  %7 = call i32 (...) @xmlCleanupInputCallbacks()
  %8 = call i32 (...) @xmlResetLastError()
  %9 = call i32 (...) @xmlCleanupGlobals()
  %10 = call i32 (...) @xmlCleanupThreads()
  %11 = call i32 (...) @xmlCleanupMemory()
  store i64 0, i64* @xmlParserInitialized, align 8
  br label %12

12:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @xmlCleanupCharEncodingHandlers(...) #1

declare dso_local i32 @xmlDictCleanup(...) #1

declare dso_local i32 @xmlCleanupInputCallbacks(...) #1

declare dso_local i32 @xmlResetLastError(...) #1

declare dso_local i32 @xmlCleanupGlobals(...) #1

declare dso_local i32 @xmlCleanupThreads(...) #1

declare dso_local i32 @xmlCleanupMemory(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
